Move asterisk inline for required responses #354

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -73,7 +73,7 @@ th {
   text-align: left;
 }
 
-label.required-true:after {
+label.required-true p:last-of-type::after {
   content: ' *';
   font-size: 1.15em;
   color: red;
