Limit inline asterisk to required submission response labels #354

--- a/app/assets/stylesheets/grant_submission_response.scss
+++ b/app/assets/stylesheets/grant_submission_response.scss
@@ -1,4 +1,9 @@
 main.submissions {
+  label.required-true p:last-of-type::after {
+    content: ' *';
+    font-size: 1.15em;
+    color: red;
+  }
   fieldset {
     legend {
       font-weight: bold;
