--- a/app/views/grant_submissions/submissions/show.html.haml
+++ b/app/views/grant_submissions/submissions/show.html.haml
@@ -20,7 +20,7 @@
       %p
         = link_to 'Review this Submission', edit_grant_submission_review_path(@grant, @submission, review), class: 'button'
         = link_to 'Opt Out of Review', opt_out_grant_submission_review_path(@grant, @submission, review), method: :delete, data: { confirm: 'You will no longer be able to view or review this submission.'}, class: 'button clear secondary'
-    - if @grant.editors.include?(current_user)
+    - if @grant.administrators.include?(current_user)
       %p
         = link_to 'See Reviews of this Submission', grant_submission_reviews_path(@submission.grant, @submission)
 
