--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -73,7 +73,9 @@ th {
   text-align: left;
 }
 
-label.required-true:after {
+// submission labels contain paragraphs
+//   see: grant_submission_responses.scss
+main:not(.submissions) label.required-true:after {
   content: ' *';
   font-size: 1.15em;
   color: red;
