--- a/app/views/grant_submissions/submissions/_admin_links.html.haml
+++ b/app/views/grant_submissions/submissions/_admin_links.html.haml
@@ -3,5 +3,7 @@
 %li
   - if submission.draft?
     = link_to 'Edit', edit_grant_submission_path(grant, submission), class: 'button clear'
+  - elsif submission.submitted?
+    = link_to 'Switch to Draft', unsubmit_grant_submission_path(grant, submission), method: :patch, class: 'button clear', title: 'Allow for editing'
 %li
   = link_to 'Delete', grant_submission_path(grant, submission), method: :delete, data: { confirm: 'Are you sure?'}, class: 'button clear alert', confirm: 'Are you sure?' if !grant.published?
