--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -42,7 +42,7 @@
             %td
               = link_to submission.title, grant_submission_path(@grant, submission)
             %td
-              = submission.state
+              = submission.state.titleize
             %td
               = submission.created_at
             %td
