--- a/app/views/grant_submissions/submissions/responses/_file_upload_response.html.erb
+++ b/app/views/grant_submissions/submissions/responses/_file_upload_response.html.erb
@@ -9,15 +9,21 @@
       <%= ff.label(ffn, simple_format(ff.object.question.text), class: "required-#{is_mandatory}") %>
     </span>
 
+    <% if ff.object.question.instruction.present? %>
+      <p>
+        <%= simple_format(ff.object.question.instruction) %>
+      </p>
+    <% end %>
+
     <div>
-      <% if ff.object.submission == f.object %>
-        <%= ff.text_area(attribute: ffn,
-                         options: { rows: 5, cols: 31, data: { question_id: ff.object.question.id } }) %>
+
+      <%- if ff.object.submission == f.object %>
+        <%= ff.file_upload_field(has_saved_file: (ff.object.document && ff.object.document.attached?),
+                                 file_field: ffn,
+                                 remove_document: :remove_document,
+                                 document: ff.object.document) %>
       <% else %>
           <%= ff.object.formatted_response_value %>
-      <% end %>
-      <% if ff.object.question.instruction.present? %>
-        <p class="helper-text">Instruction: <%= simple_format(ff.object.question.instruction, {}, wrapper_tag: 'span') %></p>
       <% end %>
     </div>
   </td>
