--- a/app/views/grant_submissions/submissions/responses/_short_text_response.html.erb
+++ b/app/views/grant_submissions/submissions/responses/_short_text_response.html.erb
@@ -1,30 +1,4 @@
-<tr class="question question-<%= ff.object.question.id %>">
-  <% ffn = ff.object.form_field_name %>
-  <% is_mandatory = ff.object.question.is_mandatory %>
-  <td colspan="2">
-    <span>
-      <% if ff.object.submission == f.object %>
-          <%= ff.hidden_field :grant_submission_question_id %>
-      <% end %>
-      <%= ff.label(ffn, simple_format(ff.object.question.text), class: "required-#{is_mandatory}") %>
-    </span>
+<%= ff.text_field(attribute: ffn,
+                  options: { data: { question_id: ff.object.question.id } }) %>
 
-    <% if ff.object.question.instruction.present? %>
-      <p>
-        <%= simple_format(ff.object.question.instruction) %>
-      </p>
-    <% end %>
-
-    <div>
-
-      <%- if ff.object.submission == f.object %>
-        <%= ff.text_field(attribute: ffn,
-                          options: { data: { question_id: ff.object.question.id } }) %>
-      <% else %>
-          <%= ff.object.formatted_response_value %>
-      <% end %>
-
-      <p class="helper-text">Instruction: Up to 256 characters</p>
-    </div>
-  </td>
-</tr>
+<p class="help-text">Instruction: Up to 256 characters</p>
