--- a/app/views/grant_submissions/submissions/responses/_date_opt_time_response.html.erb
+++ b/app/views/grant_submissions/submissions/responses/_date_opt_time_response.html.erb
@@ -1,26 +1,5 @@
-<tr class="question question-<%= ff.object.question.id %>">
-  <% ffn = ff.object.form_field_name %>
-  <% is_mandatory = ff.object.question.is_mandatory %>
-  <td colspan="2">
-    <span>
-      <% if ff.object.submission == f.object %>
-          <%= ff.hidden_field :grant_submission_question_id %>
-      <% end %>
-      <%= ff.label(ffn, simple_format(ff.object.question.text), class: "required-#{is_mandatory}") %>
-    </span>
-
-    <% if ff.object.question.instruction.present? %>
-      <p>
-        <%= simple_format(ff.object.question.instruction) %>
-      </p>
-    <% end %>
-
-    <div>
-      <%- if ff.object.submission == f.object %>
-        <%= ff.date_opt_time_field :datetime_val, :boolean_val, options: { data: { question_id: ff.object.question.id } } %>
-      <% else %>
-          <%= ff.object.formatted_response_value %>
-      <% end %>
-    </div>
-  </td>
-</tr>
+<div class="grid-x">
+  <div class="cell small-12 medium-4">
+    <%= ff.date_opt_time_field :datetime_val, :boolean_val, options: { data: { question_id: ff.object.question.id } } %>
+  </div>
+</div>
