CSS changes for responses and form edit #383

--- a/app/assets/stylesheets/foundation-datepicker.css
+++ b/app/assets/stylesheets/foundation-datepicker.css
@@ -145,7 +145,7 @@
   right: 0;
   width: 15px;
   height: 30px;
-  padding: 0;
+  padding: 10px;
   display: none; }
 
 .table-striped .datepicker table tr td,
