--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -64,3 +64,13 @@
     }
   }
 }
+
+.help-text {
+  color: $dark-gray;
+  padding-left: 0.15em;
+}
+
+label {
+  color: $black;
+  font-size: 1.15em;
+}
