--- a/app/assets/stylesheets/grant_submission_form.scss
+++ b/app/assets/stylesheets/grant_submission_form.scss
@@ -1,25 +1,28 @@
-main {
-  .forms {
-    form.edit_grant_submission_form {
-      a.button {
-        margin: 1em;
+main.forms {
+  form.edit_grant_submission_form {
+    a.button {
+      margin: 0.25em 0.5em;
+    }
+    fieldset.fieldset {
+      legend {
+        font-size: 1.15em;
+        font-weight: bold;
+        padding: 0 0.5em;
       }
-      td {
-        vertical-align: top;
-      }
-      fieldset.fieldset {
-        &.form_builder_section_fieldset,
-        &.form_builder_question_fieldset {
-          legend {
-            span {
-              font-weight: bold;
-            }
-          }
+      .fields {
+        label {
+          padding-left: 0.25em
+        }
+        legend {
+          font-size: .95em;
         }
       }
     }
   }
-  #reviews-overview {
-    margin-bottom: 1em;
-  }
 }
+
+#reviews-overview {
+  margin-bottom: 1em;
+}
+
+// html body div.grid-container div.grid-x.grid-margin-x.grid-margin-y main.cell.forms div.tabs-panel.is-active form#edit_grant_submission_form_4.edit_grant_submission_form div.fields fieldset.fieldset.form_builder_section_fieldset legend a.button
