--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -1,3 +1,4 @@
+- content_for(:page_title, "Reviews of #{@submission.title}")
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @submission.grant }
 
@@ -52,16 +53,16 @@
       .grid-x.grid-padding-y
         .cell.small-12
           %h3
-            Scores and Comments
+            Criteria Scores and Comments
 
       - @grant.criteria.each do |criterion|
-        .grid-x.grid-y
+        .grid-x.grid-y.criterion
           .row
             .cell.small-12
               %h5{id: "criterion-#{criterion.id}"}
                 = criterion.name
           .row
-            .cell.small-12
+            .cell.small-12.reviews
               - @reviews.completed.each do |review|
                 .grid-x.review
                   .cell.small-12.medium-2.reviewer
@@ -69,11 +70,35 @@
                   .cell.small-12.medium-10.responses
                     .grid-y
                       - scored_criterion = review.criteria_reviews.to_a.detect {|score| score.criterion_id == criterion.id}
-                      - if scored_criterion
-                        .row
+                      .row
+                        - if scored_criterion.score.present?
                           = scored_criterion.score
-                        .row
+                        - else
+                          NS
+                      .row
+                        - if scored_criterion.comment.present?
                           = scored_criterion.comment
-                      - else
-                        NS
+                        - else
+                          %em
+                            No comment provided.
 
+            %hr
+
+      .grid-x.grid-padding-y
+        .cell.small-12
+          %h3#overall-impact
+            Overall Impact Scores and Comments
+
+          #overall-impact.grid-x.grid-y
+            .row
+              .cell.small-12.reviews
+                - @reviews.completed.each do |review|
+                  .grid-x.review
+                    .cell.small-12.medium-2.reviewer
+                      = full_name(review.reviewer)
+                    .cell.small-12.medium-10.responses
+                      .grid-y
+                        .row
+                          = review.overall_impact_score
+                        .row
+                          = review.overall_impact_comment
