--- a/app/assets/stylesheets/grant_submission/reviews.scss
+++ b/app/assets/stylesheets/grant_submission/reviews.scss
@@ -1,12 +1,20 @@
+@import 'settings';
+
 main.reviews {
   #reviews-overview {
-    .row {
-      .reviews {
-        .review {
-          padding: 1em;
+    .grid-x.criterion,
+    #overall-impact.grid-x {
+      border-bottom: 1px solid $medium-gray;
+      .row {
+        .reviews {
+          .review {
+            padding: 1em;
+          }
         }
       }
     }
+    #overall-impact.grid-x {
+      border-bottom: none;
+    }
   }
 }
-// main.reviews div.tabs-panel.is-active div#reviews-overview.grid-container-x div#criterion.grid-x.grid-y div.row div.cell.small-12.reviews div.grid-x.review
