--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -1,3 +1,4 @@
+- content_for(:page_title, "Reviews of #{@submission.title}")
 
 = render 'shared/grant_edit_tabbed_menu', { grant: @submission.grant }
 
@@ -27,7 +28,7 @@
               = link_to 'Assign it to a reviewer', grant_reviewers_path(@grant)
             - elsif @submission.draft?
               This submission must be completed before it can be reviewed.
-        -else
+        - else
 
           = render 'shared/pagy_header', locals: { pagy: @pagy }
 
@@ -47,3 +48,53 @@
             %tbody
               = render @reviews
 
+    - if @reviews.completed.any?
+
+      .grid-x.grid-padding-y
+        .cell.small-12
+          %h3
+            Criteria Scores and Comments
+
+      - @grant.criteria.each do |criterion|
+        .grid-x.grid-y.criterion
+          .row
+            .cell.small-12
+              %h5{id: "criterion-#{criterion.id}"}
+                = criterion.name
+          .row
+            .cell.small-12.reviews
+              - @reviews.completed.each do |review|
+                .grid-x.grid-margin-x.review{id: "review-#{review.id}" }
+                  .cell.small-12.medium-2.reviewer.text-right
+                    = full_name(review.reviewer)
+                  .cell.small-12.medium-10.responses
+                    .grid-y
+                      - scored_criterion = review.criteria_reviews.to_a.detect {|score| score.criterion_id == criterion.id}
+                      .row{id: "criterion-#{criterion.id}-score"}
+                        - if scored_criterion.score.present?
+                          = scored_criterion.score
+                        - else
+                          NS
+                      - if scored_criterion.comment.present?
+                        .row{id: "criterion-#{criterion.id}-comment"}
+                          = scored_criterion.comment
+
+
+      .grid-x.grid-padding-y
+        .cell.small-12
+          %h3#overall-impact
+            Overall Impact Scores and Comments
+
+          #overall-impact.grid-x.grid-y
+            .row
+              .cell.small-12.reviews
+                - @reviews.completed.each do |review|
+                  .grid-x.review
+                    .cell.small-12.medium-2.reviewer
+                      = full_name(review.reviewer)
+                    .cell.small-12.medium-10.responses
+                      .grid-y
+                        .row
+                          = review.overall_impact_score
+                        .row
+                          = review.overall_impact_comment
