--- a/app/views/grants/criteria/_criterion_fields.html.haml
+++ b/app/views/grants/criteria/_criterion_fields.html.haml
@@ -5,17 +5,17 @@
     .grid-x
       .cell.small-12.medium-2
         = f.label :name
-      .cell.small-12.medium-10
+      .cell.small-12.medium-9.medium-offset-1
         = f.text_field :name, width: 50, required: true, disabled: disable_fields
   .field
     .grid-x
       .cell.small-12.medium-2
         = f.label :description
-      .cell.small-12.medium-10
+      .cell.small-12.medium-9.medium-offset-1
         = f.text_area :description, width: 50, disabled: disable_fields
   .field
     .grid-x
-      .cell.small-12.medium-offset-2
+      .cell.small-12.medium-offset-3
         = f.check_box :is_mandatory, disabled: disable_fields
         = f.label :is_mandatory
         %br
