--- a/app/views/grants/criteria/index.html.haml
+++ b/app/views/grants/criteria/index.html.haml
@@ -15,9 +15,11 @@
   .grid-x
     .cell.small-12
       %p
-        %em In addtion to "Overall Impact", you can define the review criteria by which submissions to this grant will be scored.
+        %em
+          Reviewers will use the criteria defined on this page to assess their assigned submissions. You may also provide instuctions and guidelines to help them score the submissions.
       %p
-        %em Scoring matches the NIH's #{link_to '9-point scale', href: 'https://grants.nih.gov/grants/policy/review/rev_prep/scoring.htm'} as shown below.
+        %em
+          Scoring matches the NIH's #{link_to '9-point scale', href: 'https://grants.nih.gov/grants/policy/review/rev_prep/scoring.htm'} as shown below.
 
   .grid-x
     .button-group
@@ -35,8 +37,16 @@
     #criteria.grid-x
       .cell
         = f.fields_for :criteria, @criteria do |criterion|
-          = render partial:'criterion_fields', locals: { f: criterion }
-        - if disable_fields != true
-          .links
-            = link_to_add_association 'Add a New Review Criterion', f, :criteria, class: 'button hollow small warning'
-          = f.submit 'Save Changes', class: 'button'
+          = render partial: 'criterion_fields', locals: { f: criterion }
+
+    - unless disable_fields
+      .links
+        = link_to_add_association 'Add a New Review Criterion', f, :criteria, class: 'button hollow small'
+
+
+      .cell.overall_impact_score
+        = render partial: 'overall_impact_fields'
+
+
+      .cell
+        = f.submit 'Save Changes', class: 'button'
