--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -26,7 +26,6 @@
           = f.label :applicant_last_name_or_title_cont, 'Search Applicant Last Name or Project Title', class: 'text-left middle'
         .small-12.medium-3.cell
           = f.search_field :applicant_last_name_or_title_cont
-          =# f.search_field :search_cont
         .small-12.medium-3.cell
           = f.submit 'Search', class: 'button'
           = link_to 'Reset', grant_submissions_path(@grant), class: 'button clear secondary'
@@ -37,10 +36,9 @@
       %thead
         - if current_user.get_role_by_grant(grant: @grant)
           %tr
-            %th{colspan: 4}
+            %th{colspan: 5}
             %th{colspan: 2}
               Scores
-            %th
         %tr
           %th
             = sort_link(@q, :applicant_last_name, 'Applicant')
@@ -52,37 +50,56 @@
             = sort_link(@q, :updated_at, 'Updated')
           - if current_user.get_role_by_grant(grant: @grant)
             %th
+              Reviews
+            %th
               %span{ title: 'Average of scored reviews' }
                 Overall Impact
             %th
               %span{ title: 'Average of scored Criteria' }
                 Composite
-            %th
+
       %tbody
         - @submissions.each do |submission|
-          - has_completed_reviews = submission.reviews.to_a.any?{ |review| review.overall_impact_score.present? }
+          - submission_reviews = submission.reviews.to_a
+          - has_completed_reviews = submission_reviews.any?{ |review| review.overall_impact_score.present? }
+
           %tr{data: { submission: submission.id } }
             %td
               = link_to sortable_full_name(submission.applicant), grant_submission_path(@grant, submission)
             %td
               = link_to submission.title, grant_submission_path(@grant, submission)
             %td
-              = submission.state.titleize
+              %div.status{data: {status: submission.id} }
+                = submission.state.titleize
+              - if current_user.get_role_by_grant(grant: @grant) != 'viewer' && current_user != submission.applicant
+                %div.administer.small{data: { status: submission.id} }
+                  - if submission.draft?
+                    = link_to 'Edit', edit_grant_submission_path(@grant, submission)
+                  - elsif submission.submitted?
+                    = link_to 'Switch to Draft', unsubmit_grant_submission_path(@grant, submission), method: :patch, title: 'Allow for editing'
+                - if current_user.get_role_by_grant(grant: @grant) == 'admin' && !@grant.published?
+                  %div.delete
+                    = link_to 'Delete', grant_submission_path(@grant, submission), method: :delete, data: { confirm: 'Are you sure?'}, class: 'small', confirm: 'Are you sure?'
             %td
               = date_time_separate_lines(submission.updated_at)
             - if current_user.get_role_by_grant(grant: @grant)
+              %td
+                = link_to 'Reviews', grant_submission_reviews_path(@grant, submission)
+                - if submission.reviews.any?
+                  %div.count.small{title: 'Completed / Assigned'}
+                    #{submission_reviews.count{ |review| !review.overall_impact_score.nil? }} / #{submission_reviews.count}
               %td.overall-impact{data: { overall: { impact: submission.id } } }
                 - if has_completed_reviews
-                  = submission.calculate_average_score(submission.reviews.to_a.map(&:overall_impact_score))
+                  %div.average{title: 'Average of Completed'}
+                    = submission.calculate_average_score(submission_reviews.map(&:overall_impact_score))
                 - else
                   \-
               %td.composite{data: { composite: submission.id } }
                 - if submission.reviews.completed.any?
-                  = submission.calculate_average_score(submission.criteria_reviews.to_a.map(&:score))
+                  %span{title: 'Average of Scored Criteria'}
+                    = submission.calculate_average_score(submission.criteria_reviews.to_a.map(&:score))
                 - else
                   \-
-              %td
-                %ul.menu.simple
-                  = render partial: "#{current_user.get_role_by_grant(grant: @grant)}_links", locals: { submission: submission, grant: @grant }
+
 
     != pagy_foundation_nav(@pagy)
