--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -95,3 +95,11 @@ trix-editor + p.help-text {
 .pagy-header {
   margin: .75em 0em;
 }
+
+.small {
+  font-size: .85em;
+}
+
+.not-allowed {
+  cursor: not-allowed;
+}
